# Tappi-share

./: Cargo.toml  Readme.md
src/: cli.rs  logger.rs  main.rs
src/app/: app_event.rs  app_main.rs  encrypt.rs  event.rs  file_manager.rs  mod.rs  models.rs
src/app/handlers/: app_handler.rs  client_handler.rs  mod.rs  server_handler.rs
src/client/: client_init.rs  message.rs  mod.rs  packet.rs  payload.rs  rtc_base.rs
src/client/signaling/: mod.rs  negotiator.rs  signaling_manual.rs  signaling_mqtt.rs  signaling_solution.rs  signaling_websocket.rs
src/config/themes/: catpuccin_frappe.toml  catpuccin_latte.toml  catpuccin_macchiato.toml  catpuccin_mocha.toml
src/server/: mod.rs  signal.rs  types.rs
src/ui/: mod.rs  theme.rs  tui.rs  utils.rs
src/ui/views/: client_view.rs  error_view.rs  mod.rs  server_view.rs
src/ui/widgets/: files_widget.rs  history_widget.rs  manual_handshake_widget.rs  mod.rs  rooms_widget.rs  server_handshake_widget.rs  throbber.rs  users_widget.rs
