[package]
name = "tappi-share"
version = "1.0.1"
authors = ["Noelle Stern"]
license = "AGPL-3.0"
readme = "README.md"
description = "A modern TUI p2p file sharing app"
repository = "https://github.com/NoelleStern/Tappi-share"
documentation = "https://docs.rs/Tappi-share"
keywords = ["cli", "tool", "file-sharing", "p2p", "webrtc"]
categories = ["command-line-utilities"]
edition = "2024"


[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
ansi-to-tui = "7.0.0"
arboard = "3.6.1"
async-trait = "0.1.89"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive", "cargo"] }
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
indexmap = "2.12.0"
log = "0.4.28"
pasetors = "0.7.7"
petname = "2.0.2"
rat-focus = "1.2.0"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
regex = "1.12.2"
rmpp = "0.1.0"
rumqttc = "0.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tachyonfx = "0.19.0"
textwrap = "0.16.2"
throbber-widgets-tui = "0.9.0"
tokio = "1.48.0"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.17"
tui-scrollview = "0.5.3"
tui-widget-list = "0.13.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
warp = { version = "0.4.2", features = ["websocket", "server"] }
webrtc = "0.14.0"